Changes by Dharmesh

--- a/AMDIAM/Views/Education/Education3.cshtml
+++ b/AMDIAM/Views/Education/Education3.cshtml
@@ -68,16 +68,16 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service1.html">DIAMOND SELLING SERVICE</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service2.html">DIAMOND SOURCING SERVICE</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service5.html">DM (DIAMOND MANUFACTURING)</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service6.html">AM DIAM FINANCE</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service7.html">FREE APPRAISAL AND SHIPPING</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service8.html">SECURITY SEALS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service9.html">INVESTMENT DIAMONDS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service10.html">FLEXIBLE PAYMENT OPTIONS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service4.html">PARTNERS</a></li>
-                        <li class=""><a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service3.html">CUSTOM WEB SOLUTIONS</a></li>
+                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service1.html">DIAMOND SELLING SERVICE</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service2">DIAMOND SOURCING SERVICE</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service5">DM (DIAMOND MANUFACTURING)</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service6">AM DIAM FINANCE</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service7">FREE APPRAISAL AND SHIPPING</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service8">SECURITY SEALS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service9">INVESTMENT DIAMONDS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service10">FLEXIBLE PAYMENT OPTIONS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service4">PARTNERS</a></li>
+                        <li class=""><a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service3">CUSTOM WEB SOLUTIONS</a></li>
                     </ul>
                 </div>
             </div>
@@ -294,23 +294,23 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service2.html">
+                        <a href="~/Services/service2">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SOURCING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
+                        <a href="~/Services/service1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service5.html">
+                        <a href="~/Services/service5">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">MANUFACTURING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service9.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
+                        <a href="~/Services/service9"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
