--- a/AMDIAM/Views/Services/service9.cshtml
+++ b/AMDIAM/Views/Services/service9.cshtml
@@ -59,8 +59,8 @@
         <nav class="z-10 lg:relative md:relative absolute top-20 md:top-3 py-7 lg:py-0 lg:top-0 bg-white lg:bg-[#020014] lg:flex hidden w-full justify-between items-center xl:px-40 lg:px-28 !selection:select-none"
              id="menu">
             <div class="flex flex-col lg:flex-row gap-5 lg:gap-14 items-center lg:text-white">
-                <a href="index"> <p class=" hover:text-[#B76E79] font-semibold cursor-pointer block">Home</p></a>
-                <a href="about"><p class="hover:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
+                <a href="~/Home/Index"> <p class=" hover:text-[#B76E79] font-semibold cursor-pointer block">Home</p></a>
+                <a href="~/Home/About"><p class="hover:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
 
 
                 <div class="dropdown inline-block relative z-[111]">
@@ -69,16 +69,16 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="service1">DIAMOND SELLING SERVICE</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service2">DIAMOND SOURCING SERVICE</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service5">DM (DIAMOND MANUFACTURING)</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service6">AM DIAM FINANCE</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service7">FREE APPRAISAL AND SHIPPING</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service8">SECURITY SEALS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service9">INVESTMENT DIAMONDS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service10">FLEXIBLE PAYMENT OPTIONS</a></li>
-                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service4">PARTNERS</a></li>
-                        <li class=""><a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="Services/service3">CUSTOM WEB SOLUTIONS</a></li>
+                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service1">DIAMOND SELLING SERVICE</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service2">DIAMOND SOURCING SERVICE</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service5">DM (DIAMOND MANUFACTURING)</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service6">AM DIAM FINANCE</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service7">FREE APPRAISAL AND SHIPPING</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service8">SECURITY SEALS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service9">INVESTMENT DIAMONDS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service10">FLEXIBLE PAYMENT OPTIONS</a></li>
+                        <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service4">PARTNERS</a></li>
+                        <li class=""><a class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service3">CUSTOM WEB SOLUTIONS</a></li>
                     </ul>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                         <input type="text"
                                class="h-[50px] rounded-md px-3"
                                placeholder="Your E-mail" />
-                        <a href="index">
+                        <a href="~/Home/Index">
                             <button class="h-[50px] px-5 my-2 rounded-md border hover:border-2 border-[#B76E79]">
                                 Subscribe
                             </button>
@@ -283,23 +283,23 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="Services/service2">
+                        <a href="~/Services/service2">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SOURCING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
+                        <a href="~/Services/service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="Services/service5">
+                        <a href="~/Services/service5">
                             <p class="text-[#E9E9E9] hover:text-[#B76E79]">MANUFACTURING</p>
                         </a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="Services/service9"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
+                        <a href="~/Services/service9"><p class="text-[#E9E9E9] hover:text-[#B76E79]">INVESTMENT DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -307,7 +307,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="about"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
+                        <a href="~/Home/About"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -328,7 +328,7 @@
                         <i class="fa-brands fa-facebook text-xl"></i>
                         <p class="">Facebook</p>
                     </a>
-                    <a href="index"
+                    <a href="~/Home/Index"
                        class="flex gap-3 text-white hover:text-[#B76E79]">
                         <i class="fa-brands fa-pinterest text-xl"></i>
                         <p class="">Pinterest</p>
