Changes By Vishal

--- a/AMDIAM/Views/Home/Index.cshtml
+++ b/AMDIAM/Views/Home/Index.cshtml
@@ -166,27 +166,27 @@
                         style="width: max-content">
                         <li class="">
                             <a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education1">DIAMOND 4C'S</a>
+                               href="~/education/education1">DIAMOND 4C'S</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education2">HISTORY OF THE DIAMOND</a>
+                               href="~/education/education2">HISTORY OF THE DIAMOND</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education3">HOW DIAMONDS ARE FORMED</a>
+                               href="~/education/education3">HOW DIAMONDS ARE FORMED</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education4">DIAMOND CERTIFICATION</a>
+                               href="~/education/education4">DIAMOND CERTIFICATION</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education5">FANCY COLOR DIAMONDS</a>
+                               href="~/education/education5">FANCY COLOR DIAMONDS</a>
                         </li>
                         <li class="">
                             <a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="education6">CONFLICT-FREE DIAMONDS</a>
+                               href="~/Education/education6">CONFLICT-FREE DIAMONDS</a>
                         </li>
                     </ul>
                 </div>
@@ -206,29 +206,29 @@
                         style="width: max-content">
                         <li class="">
                             <a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="contact">CONTACT US</a>
+                              href"~/contact/contact">CONTACT US</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="career">CAREER</a>
+                               href="~/contact/career">CAREER</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="signup">CREATE AN ACCOUNT</a>
+                               href="~/contact/signup">CREATE AN ACCOUNT</a>
                         </li>
                         <li class="">
                             <a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="login">LOGIN</a>
+                               href="~/contact/login">LOGIN</a>
                         </li>
                         <li class="">
                             <a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
-                               href="passwordreset">FORGOT PASSWORD</a>
+                               href="~/contact/forgotpassword">FORGOT PASSWORD</a>
                         </li>
                     </ul>
                 </div>
 
                 <!-- <p class="hover:text-[#B76E79] cursor-pointer block font-semibold">Contact</p> -->
-                <a href="login">
+                <a href="~/contact/login">
                     <span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span>
                 </a>
             </div>
@@ -265,10 +265,10 @@
                             </div>
 
                             <div class="flex gap-5">
-                                <a href="contact" class="button2  px-5 py-1 border border-white">
+                                <ahref"~/contact/contact" class="button2  px-5 py-1 border border-white">
                                     Contact
                                 </a>
-                                <a href="education1" class="flex gap-3  items-center">
+                                <a href="~/education/education1" class="flex gap-3  items-center">
                                     <p class="text-[#C6C6C6]">Gallery</p>
                                     <i class="fas text-white fa-solid fa-arrow-right"></i>
                                 </a>
@@ -362,7 +362,7 @@
                             </p>
 
                             <div class="flex gap-5">
-                                <a href="~/Services/service" class="button2  px-5 py-1 text-lg border border-white">
+                                <a href="~/Services/service1" class="button2  px-5 py-1 text-lg border border-white">
                                     Browse Collection
                                 </a>
                             </div>
@@ -519,7 +519,7 @@
                             Recycled, polished, loose, second-hand, we buy any shape & grades!
                         </p>
 
-                        <a class="py-5" href="~/Services/service">
+                        <a class="py-5" href="~/Services/service1">
                             <button class="button px-5 py-1 uppercase text-base border border-white">
                                 Sell Now
                             </button>
@@ -743,7 +743,7 @@
                 <div class="flex flex-col gap-y-4">
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="~/Services/service"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
+                        <a href="~/Services/service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -767,7 +767,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
+                        <a href="~/education/education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -775,11 +775,11 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="career"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
+                        <a href="~/contact/career"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="contact"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
+                        <ahref"~/contact/contact"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
                     </div>
                 </div>
             </div>
