--- a/AMDIAM/Views/Services/service2.cshtml
+++ b/AMDIAM/Views/Services/service2.cshtml
@@ -67,7 +67,7 @@
 
                 <div class="dropdown inline-block relative z-[111]">
                     <button class="font-semibold py-2  rounded inline-flex items-center">
-                        <a href="service"><span class="mr-1 lg:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
+                        <a href="~/Services/service1"><span class="mr-1 lg:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
@@ -101,12 +101,12 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education1">DIAMOND 4C'S</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education2">HISTORY OF THE DIAMOND</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education3">HOW DIAMONDS ARE FORMED</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education4">DIAMOND CERTIFICATION</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education5">FANCY COLOR DIAMONDS</a></li>
-                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="education6">CONFLICT-FREE DIAMONDS</a></li>
+                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education1">DIAMOND 4C'S</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education2">HISTORY OF THE DIAMOND</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education3">HOW DIAMONDS ARE FORMED</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education4">DIAMOND CERTIFICATION</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education5">FANCY COLOR DIAMONDS</a></li>
+                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education6">CONFLICT-FREE DIAMONDS</a></li>
 
                     </ul>
                 </div>
@@ -118,17 +118,17 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="contact">CONTACT US</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="career">CAREER</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="signup">CREATE AN ACCOUNT</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="login">LOGIN</a></li>
-                        <li class=""><a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="passwordreset">FORGOT PASSWORD</a></li>
+                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/contact">CONTACT US</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/career">CAREER</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/signup">CREATE AN ACCOUNT</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/login">LOGIN</a></li>
+                        <li class=""><a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/forgotpassword">FORGOT PASSWORD</a></li>
 
                     </ul>
                 </div>
 
                 <!-- <p class="hover:text-[#B76E79] cursor-pointer block font-semibold">Contact</p> -->
-                <a href="login"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span></a>
+                <a href="~/contact/login"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span></a>
             </div>
         </nav>
 
@@ -269,7 +269,7 @@
                 <div class="flex flex-col gap-y-4">
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
+                        <a href="~/Services/service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -293,7 +293,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
+                        <a href="~/Education/Education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -301,11 +301,11 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="career"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
+                        <a href="~/contact/career"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="contact"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
+                        <a href="~/contact/contact"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
                     </div>
                 </div>
             </div>
