--- a/AMDIAM/Views/Contact/Contact.cshtml
+++ b/AMDIAM/Views/Contact/Contact.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -40,7 +39,6 @@
     <div class="bg-[#020014] ">
         <!-- navbar  -->
 
-
         <div class="flex lg:hidden sticky top-0 z-[11] bg-[#020014] items-center justify-between py-5 px-4">
             <p class="text-white lg:hidden">AHMD</p>
             <div class="bg-white lg:hidden flex text-black rounded-lg p-2" id="menu-button">
@@ -60,13 +58,13 @@
         <nav class="z-10 lg:relative md:relative absolute top-20 md:top-3 py-7 lg:py-0 lg:top-0 bg-white lg:bg-[#020014] lg:flex hidden w-full justify-between items-center xl:px-40 lg:px-28 !selection:select-none"
              id="menu">
             <div class="flex flex-col lg:flex-row gap-5 lg:gap-14 items-center lg:text-white">
-                <a href="~/Home/Index"> <p class=" hover:text-[#B76E79] font-semibold cursor-pointer block">Home</p></a>
-                <a href="~/Home/About"><p class="hover:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
+                <a href="~/home/index"> <p class=" hover:text-[#B76E79]  font-semibold cursor-pointer block">Home</p></a>
+                <a href="~/home/about"><p class="hover:text-[#B76E79] cursor-pointer font-semibold block">About</p></a>
 
 
                 <div class="dropdown inline-block relative z-[111]">
                     <button class="font-semibold py-2  rounded inline-flex items-center">
-                        <a href="~/Services/service1"><span class="mr-1 lg:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
+                        <a href="~/Services/service1"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
@@ -113,7 +111,7 @@
 
                 <div class="dropdown inline-block relative">
                     <button class="font-semibold py-2  rounded inline-flex items-center">
-                        <a href=""><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Contact</span></a>
+                        <a href="~/contact/contact"><span class="mr-1 lg:text-[#B76E79] cursor-pointer font-semibold block">Contact</span></a>
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
@@ -136,9 +134,9 @@
         <div class="relative w-full ">
             <img src="~/img/light.png" alt="" class="w-screen max-h-[80px]" />
             <div class="absolute top-0 left-0 right-0 bottom-0 flex items-center md:px-24 px-5 justify-between">
-                <p class="text-white text-center">FLEXIBLE PAYMENT OPTIONS</p>
+                <p class="text-white text-center">CONTACT US</p>
                 <p class="md:text-base text-sm text-[#A8A5A5]">
-                    Home / <span class="text-white md:text-lg text-sm">FLEXIBLE PAYMENT OPTIONS</span>
+                    Home / <span class="text-white md:text-lg text-sm">CONTACT US</span>
                 </p>
             </div>
         </div>
@@ -147,96 +145,56 @@
 
 
 
-        <div class="my-10 md:px-28 px-10  text-white">
-
-            <div class="flex flex-col gap-y-7">
-                <p class="text-3xl">SMOOTH SHOPPING EXPERIENCE</p>
-                <p class="text-base font-light">At AM DIAM DMCC, we offer flexible payment options, with a buy now pay later scheme. Our aim is to provide you more purchasing power, and a smooth shopping experience. Through our payment schemes, you gain the advantage of paying for your diamonds over a period of time. We also offer custom financing plan according to your specific requirements, enabling you to divide your purchase into multiple budget-friendly payments.</p>
-
-            </div>
 
 
-            <div class="grid md:grid-cols-3 grid-cols-1 py-10 gap-20  my-10 text-white">
-                <div class="flex">
-                    <img src="~/img/~/Services/service10.png" alt="">
+        <div class="flex items-center justify-start flex-col  text-white">
+
+            <div class="flex flex-col gap-y-7 items-start justify-start">
+
+                <div class=""><p class="text-3xl font-semibold">SEND US AN EMAIL</p></div>
+
+
+
+                <div class="flex flex-col gap-y-3">
+                    <label for="" class="text-base font-semibold">NAME *</label>
+                    <input type="text" class="py-3 px-3 text-black md:w-[460px] w-[300px] rounded" />
                 </div>
-                <div class="flex col-span-2 flex-col gap-y-7">
-
-
-
-
-
-                    <li class="text-base text-justify">For certificate goods or polished diamonds you can contact us for any query.</li>
-
-                    <p class="text-base text-justify">For more information on our financing schemes and flexible payment options, and or, to find out about how we can customise a finance plan specific to your needs, contact one of our customer care representatives, or fill out the contact form, and someone will get in touch with you.</p>
-
-
-
-                    <div class="flex justify-start text-white py-5">
-                        <a href="~/contact/contact" class="button2 py-1 px-5 text-base border border-white">
-                            Contact Us
-                        </a>
-                    </div>
-
-
-
-
-
-
+                <div class="flex flex-col gap-y-3">
+                    <label for="" class="text-base font-semibold">EMAIL *</label>
+                    <input type="email" class="py-3 px-3 text-black md:w-[460px] w-[300px] rounded " />
                 </div>
-            </div>
-
-
-
-
-
-
-
-        </div>
-
-
-
-        <div class="relative w-screen my-10">
-            <img src="~/img/navdownlight.jpg" alt="" class="w-screen">
-            <div class="absolute top-0 left-0 right-0 bottom-0 flex flex-col gap-y-5 items-center justify-center ">
-                <p class="text-2xl text-white font-semibold lg:mt-10 mt-10">EXPERT ADVISE</p>
-                <p class="text-white text-center font-light md:text-base text-xs md:px-28 px-5">Keeping in mind that buying and selling diamonds is complex process, we understand that qualified experience is essential. You may or may not have the accurate information or knowledge of making an informed decision, and getting the best value for your diamonds. At AM DIAM DMCC, you can be assured of receiving the best value for your diamonds thanks to our experience in valuing and buying diamonds.  We have gained the expertise and knowledge needed to offer you the highest prices for your diamonds. You can book an appointment, free and benefit from our trustworthy experts on your every transaction.</p>
-            </div>
-
-
-        </div>
-
-        <div class="flex justify-center text-white py-5">
-            <a href="~/contact/contact" class=" button2 py-1 px-5 text-base border border-white">
-                Contact Us
-            </a>
-        </div>
-
-        <!-- news later  -->
-        <div class="md:px-28 px-10 w-full">
-            <div class="newslater lg:h-[120px] w-full items-center  gap-5 justify-between p-5 flex md:px-10   my-16">
-                <p class="text-2xl font-bold">
-                    Subscribe to Our
-                    Newsletter
-                </p>
-                <div class="flex flex-col items-center  ">
-                    <div class="lg:flex items-center gap-3">
-                        <input type="text"
-                               class="h-[50px] rounded-md px-3"
-                               placeholder="Your E-mail" />
-                        <a href="~/Home/Index">
-                            <button class="h-[50px] px-5 my-2 rounded-md border hover:border-2 border-[#B76E79]">
-                                Subscribe
-                            </button>
-                        </a>
-                    </div>
-                    <p class="text-sm text-[#E9E9E9]">
-                        Discover the latest collections, news and exclusive launches.
-                    </p>
+                <div class="flex flex-col gap-y-3">
+                    <label for="" class="text-base font-semibold">PHONE *</label>
+                    <input type="tel" class="py-3 px-3 text-black md:w-[460px] w-[300px] rounded" />
                 </div>
+
+                <div class="flex flex-col gap-y-3">
+                    <label for="" class="text-base font-semibold">SERVICES *</label>
+
+                    <select id="dropdown" name="dropdown" class="block py-3 px-3 text-black  bg-white  md:w-[460px] w-[300px] rounded ">
+                        <option value="option1">Select One </option>
+                        <option value="option2">Option 2</option>
+                        <option value="option3">Option 3</option>
+                    </select>
+                </div>
+
+                <div class="flex flex-col gap-y-3">
+                    <label for="" class="text-base font-semibold">MESSAGE: *</label>
+                    <textarea name="" id="" class="py-3 px-3 text-black  md:w-[460px] w-[300px] rounded" cols="" rows="3"></textarea>
+                </div>
+
+
+                <div class="flex justify-start ">
+                    <button class="px-6 py-3 text-lg border border-[#B76E79] rounded-xl">
+                        Submit Form
+                    </button>
+                </div>
+
+
             </div>
 
         </div>
+
         <!-- footer section  -->
 
         <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-y-10 w-full lg:px-40 px-20 py-10 mt-20 justify-items-center">
@@ -312,7 +270,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="~/Home/About"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
+                        <a href="~/home/about"> <p class="text-[#E9E9E9] hover:text-[#B76E79]">ABOUT US</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -333,7 +291,7 @@
                         <i class="fa-brands fa-facebook text-xl"></i>
                         <p class="">Facebook</p>
                     </a>
-                    <a href="~/Home/Index"
+                    <a href="~/home/index"
                        class="flex gap-3 text-white hover:text-[#B76E79]">
                         <i class="fa-brands fa-pinterest text-xl"></i>
                         <p class="">Pinterest</p>
@@ -354,6 +312,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <div class="py-3 bg-[#24101B] px-20">
@@ -362,29 +321,7 @@
         </p>
     </div>
 
-    <!-- tab view js  -->
-    <script>
-      function openTab(evt, tabName) {
-        var i, tabContent;
-        tabContent = document.getElementsByClassName("tab-content");
 
-        // Hide all tab content
-        for (i = 0; i < tabContent.length; i++) {
-          tabContent[i].style.display = "none";
-        }
-
-        // Show the selected tab content
-        document.getElementById(tabName).style.display = "block";
-      }
-
-      // Show the first tab and hide the rest on page load
-      window.addEventListener("DOMContentLoaded", function () {
-        var tabContent = document.getElementsByClassName("tab-content");
-        for (var i = 1; i < tabContent.length; i++) {
-          tabContent[i].style.display = "none";
-        }
-      });
-    </script>
 
 
     <!-- navbar javascript  -->
