--- a/AMDIAM/Views/Education/Education4.cshtml
+++ b/AMDIAM/Views/Education/Education4.cshtml
@@ -64,11 +64,11 @@
 
                 <div class="dropdown inline-block relative z-[111]">
                     <button class="font-semibold py-2  rounded inline-flex items-center">
-                        <a href="service.html"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
+                        <a href="~/Services/service1"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Services</span></a>
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service1.html">DIAMOND SELLING SERVICE</a></li>
+                        <li class=""><a class="rounded-t bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service1">DIAMOND SELLING SERVICE</a></li>
                         <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service2">DIAMOND SOURCING SERVICE</a></li>
                         <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service5">DM (DIAMOND MANUFACTURING)</a></li>
                         <li class=""><a class=" bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Services/service6">AM DIAM FINANCE</a></li>
@@ -98,12 +98,12 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education1">DIAMOND 4C'S</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education2">HISTORY OF THE DIAMOND</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education3">HOW DIAMONDS ARE FORMED</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education4">DIAMOND CERTIFICATION</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education5">FANCY COLOR DIAMONDS</a></li>
-                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/Education6">CONFLICT-FREE DIAMONDS</a></li>
+                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/education1">DIAMOND 4C'S</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/education2">HISTORY OF THE DIAMOND</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/education3">HOW DIAMONDS ARE FORMED</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/education4">DIAMOND CERTIFICATION</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/education5">FANCY COLOR DIAMONDS</a></li>
+                        <li class=""><a class=" rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/Education/education6">CONFLICT-FREE DIAMONDS</a></li>
 
                     </ul>
                 </div>
@@ -115,17 +115,17 @@
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" /> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 " style="width: max-content;">
-                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="contact.html">CONTACT US</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="career.html">CAREER</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="signup.html">CREATE AN ACCOUNT</a></li>
-                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="login.html">LOGIN</a></li>
-                        <li class=""><a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="passwordreset.html">FORGOT PASSWORD</a></li>
+                        <li class=""><a class="rounded-t-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/contact">CONTACT US</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/career">CAREER</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/signup">CREATE AN ACCOUNT</a></li>
+                        <li class=""><a class="bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/login">LOGIN</a></li>
+                        <li class=""><a class="rounded-b-lg bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" href="~/contact/forgotpassword">FORGOT PASSWORD</a></li>
 
                     </ul>
                 </div>
 
                 <!-- <p class="hover:text-[#B76E79] cursor-pointer block font-semibold">Contact</p> -->
-                <a href="login.html"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span></a>
+                <a href="~/contact/login"><span class="mr-1 hover:text-[#B76E79] cursor-pointer font-semibold block">Login</span></a>
             </div>
         </nav>
 
@@ -166,7 +166,7 @@
 
             <div class="md:px-28 px-10 my-10 grid md:grid-cols-4 grid-cols-1 gap-10 items-start text-white">
                 <div class="">
-                    <img src="~/img/education4logo1.png" alt="">
+                    <img src="~/img/~/education/education4logo1.png" alt="">
                 </div>
                 <div class="col-span-3">
                     <div class="flex flex-col gap-y-5 ">
@@ -180,7 +180,7 @@
             </div>
             <div class="md:px-28 px-10 my-10 grid md:grid-cols-4 grid-cols-1 gap-10 items-start text-white">
                 <div class="">
-                    <img src="~/img/education4logo2.png" alt="">
+                    <img src="~/img/~/education/education4logo2.png" alt="">
                 </div>
                 <div class="col-span-3">
                     <div class="flex flex-col gap-y-5 ">
@@ -194,7 +194,7 @@
             </div>
             <div class="md:px-28 px-10 my-10 grid md:grid-cols-4 grid-cols-1 gap-10 items-start text-white">
                 <div class="">
-                    <img src="~/img/education4logo3.png" alt="">
+                    <img src="~/img/~/education/education4logo3.png" alt="">
                 </div>
                 <div class="col-span-3">
                     <div class="flex flex-col gap-y-5 ">
@@ -223,7 +223,7 @@
         </div>
 
         <div class="flex justify-center text-white py-5">
-            <a href="contact.html" class="button2 py-1 px-5 text-base border border-white">
+            <a href="~/contact/contact" class="button2 py-1 px-5 text-base border border-white">
                 Contact Us
             </a>
         </div>
@@ -301,7 +301,7 @@
                 <div class="flex flex-col gap-y-4">
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="service.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
+                        <a href="~/Services/service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND BUYING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -311,7 +311,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="~/Services/service1.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
+                        <a href="~/Services/service1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">DIAMOND SELLING</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="~/Education/Education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
+                        <a href="~/Education/education1"><p class="text-[#E9E9E9] hover:text-[#B76E79]">4C OF DIAMOND</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
@@ -333,11 +333,11 @@
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="career.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
+                        <a href="~/contact/career"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CAREER</p></a>
                     </div>
                     <div class="flex gap-3 items-center">
                         <i class="fas text-white fa-solid fa-chevron-right"></i>
-                        <a href="contact.html"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
+                        <a href="~/contact/contact"><p class="text-[#E9E9E9] hover:text-[#B76E79]">CONTACT</p></a>
                     </div>
                 </div>
             </div>
